--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ jobs:
   - task:               GithubRelease@0
     inputs:
       gitHubConnection: new GitHub connection
-      repositoryName:   Urban-Meteorology-Reading/SUEWS
+      repositoryName:   UMEP-dev/SUEWS
       assets:           ./Release/*.zip
       action:           'Edit'
       target:           '$(build.sourceVersion)'
@@ -125,7 +125,7 @@ jobs:
   - task:               GithubRelease@0
     inputs:
       gitHubConnection: new GitHub connection
-      repositoryName:   Urban-Meteorology-Reading/SUEWS
+      repositoryName:   UMEP-dev/SUEWS
       assets:           ./Release/*.zip
       action:           'Edit'
       target:           '$(build.sourceVersion)'
@@ -208,7 +208,7 @@ jobs:
   - task:               GithubRelease@0
     inputs:
       gitHubConnection: new GitHub connection
-      repositoryName:   Urban-Meteorology-Reading/SUEWS
+      repositoryName:   UMEP-dev/SUEWS
       assets:           ./Release/*.zip
       action:           'Edit'
       target:           '$(build.sourceVersion)'
