--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,10 +1,11 @@
-sphinx==3.0.0
-pybtex==0.22.2
-f90nml==1.0.2
-pandas==0.25.3
-numpy==1.15.4
-nbsphinx==0.4.2
+sphinx
+pybtex
+f90nml
+pandas
+numpy
+nbsphinx
 exhale==0.2.3
-sphinxcontrib_programoutput==0.15
+sphinxcontrib_programoutput
 sphinxcontrib.bibtex
 sphinx_rtd_theme
+recommonmark
