--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -58,7 +58,8 @@ jobs:
 
     - name: show version
       run: |
-        alias gfortran="gfortran-10"
+        bin_gfortran=$(which gfortran-10)
+        ln -sf $bin_gfortran "$(dirname "$bin_gfortran")"/gfortran
         gfortran --version
 
     - name: build and test
@@ -83,7 +84,7 @@ jobs:
         python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
 
-    - name: build and test
+    - name: build and pack as release
       run: |
         make release
 
