--- a/.github/workflows/f-prettify.yml
+++ b/.github/workflows/f-prettify.yml
@@ -14,6 +14,7 @@ on:
     paths:       # Push events containing matching files
       - 'SUEWS-SourceCode/*'
       - 'supy-driver/*'
+      - '.github/workflows/f-prettify.yml'
 
 jobs:
   build:
