--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -73,6 +73,13 @@ jobs:
         make release
         make test
 
+    - name: Upload diff results from test
+      uses: actions/upload-artifact@v2
+      with:
+        name: diff csv
+        path: Test/BaseRun/**/*diff.csv
+
+
   windows:
 
     runs-on: windows-latest
@@ -94,4 +101,12 @@ jobs:
       run: |
         make release
 
-      # make test
+    - name: build supy-driver
+      run: |
+        make driver
+
+    - name: build supy-driver
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
+        architecture: 'x64' # (x64 or x86)
