--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -107,6 +107,8 @@ jobs:
       with:
         python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
+
+    - name: build supy-driver
       run: |
         make driver
         ls -lrt supy-driver/dist/
@@ -116,6 +118,8 @@ jobs:
       with:
         python-version: '3.8' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
+
+    - name: build supy-driver
       run: |
         make driver
         ls -lrt supy-driver/dist/
@@ -125,7 +129,8 @@ jobs:
       with:
         python-version: '3.9' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
+
+    - name: build supy-driver
       run: |
         make driver
         ls -lrt supy-driver/dist/
-
