--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -45,6 +45,17 @@ jobs:
         gfortran --version
         make release
 
+    - name: set py3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
+        architecture: 'x64' # (x64 or x86)
+
+    - name: build supy-driver
+      run: |
+        make driver
+        ls -lrt supy-driver/dist/
+
   mac:
 
     runs-on: macos-latest
@@ -100,34 +111,11 @@ jobs:
     - name: build and pack as release
       run: |
         make release
-        make driver
 
-    - name: build supy-driver
+    - name: set py3.7
       uses: actions/setup-python@v2
       with:
         python-version: '3.7' # Version range or exact version of a Python version to use, using semvers version range syntax.
-        architecture: 'x64' # (x64 or x86)
-
-    - name: build supy-driver
-      run: |
-        make driver
-        ls -lrt supy-driver/dist/
-
-    - name: build supy-driver
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8' # Version range or exact version of a Python version to use, using semvers version range syntax.
-        architecture: 'x64' # (x64 or x86)
-
-    - name: build supy-driver
-      run: |
-        make driver
-        ls -lrt supy-driver/dist/
-
-    - name: build supy-driver
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9' # Version range or exact version of a Python version to use, using semvers version range syntax.
         architecture: 'x64' # (x64 or x86)
 
     - name: build supy-driver
