--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -81,7 +81,7 @@ jobs:
 
     - name: build and test
       run: |
-        brew install gcc
+        brew reinstall gcc
         which gfortran
         gfortran --version
         make release
