--- a/.github/workflows/build-SUEWS.yml
+++ b/.github/workflows/build-SUEWS.yml
@@ -61,6 +61,19 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        manylinux-python-target:
+        # NOTE: Must be from this list:
+        # NOTE: $ podman run -it --rm \
+        # NOTE:   quay.io/pypa/manylinux1_x86_64 \
+        # NOTE:   ls -1 /opt/python
+        - cp39-cp39
+        - cp38-cp38
+        - cp37-cp37m
+        - cp36-cp36m
+        - cp35-cp35m
+
     steps:
 
     - uses: actions/checkout@v1
@@ -68,21 +81,24 @@ jobs:
         submodules: true
         token: ${{ secrets.PAT }}
 
-    - name: manylinux build
+    - name: build for ${{ matrix.manylinux-python-target }}
       run: |
-        docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c "cd /io/supy-driver;gfortran --version; make clean;make suews"
-        docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c "cd /io/supy-driver;/opt/python/cp36-cp36m/bin/python -m pip install -r requirements.txt; /opt/python/cp36-cp36m/bin/python -m pip install numpy==1.15.4; /opt/python/cp36-cp36m/bin/python setup.py bdist_wheel; ls -lrt *; ls -lrt dist/*; ls -lrt wheelhouse/*"
-        docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c "cd /io/supy-driver;/opt/python/cp37-cp37m/bin/python -m pip install -r requirements.txt; /opt/python/cp37-cp37m/bin/python -m pip install numpy==1.15.4; /opt/python/cp37-cp37m/bin/python setup.py bdist_wheel; ls -lrt *; ls -lrt dist/*; ls -lrt wheelhouse/*"
-        docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c "cd /io/supy-driver;/opt/python/cp38-cp38/bin/python -m pip install -r requirements.txt; /opt/python/cp38-cp38/bin/python -m pip install numpy==1.15.4; /opt/python/cp38-cp38/bin/python setup.py bdist_wheel; ls -lrt *; ls -lrt dist/*; ls -lrt wheelhouse/*"
-        docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c "cd /io/supy-driver;/opt/python/cp39-cp39/bin/python -m pip install -r requirements.txt; /opt/python/cp39-cp39/bin/python -m pip install numpy==1.15.4; /opt/python/cp39-cp39/bin/python setup.py bdist_wheel; ls -lrt *; ls -lrt dist/*; ls -lrt wheelhouse/*"
+        docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c \
+        "cd /io/supy-driver;gfortran --version; make suews"
+        docker run -v $(pwd):/io dockcross/manylinux1-x64 bash -c \
+        "cd /io/supy-driver;\
+        /opt/python/${{ matrix.manylinux-python-target }}/bin/python -m pip install -r requirements.txt;\
+        /opt/python/${{ matrix.manylinux-python-target }}/bin/python -m pip install numpy==1.15.4;\
+        /opt/python/${{ matrix.manylinux-python-target }}/bin/python setup.py bdist_wheel; \
+        ls -lrt *; \
+        ls -lrt dist/*; \
+        ls -lrt wheelhouse/*"
 
-    - name: Store the binary wheel
+    - name: Store ${{ matrix.manylinux-python-target }} binary wheel
       uses: actions/upload-artifact@v2
       with:
         name: python-package-distributions
         path: supy-driver/wheelhouse/
-
-
 
 
   mac:
